--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -23,7 +23,7 @@
                 <div><a href="/favlocation"><img src="/img/png/placeslogoweb.png" alt="maps"></a></div>
                 <h1 id="dash-headers"><a href="/favlocation">Click To View Your Saved Locations</a></h1>
                 
-                        <a href="/favlocation"><img class="fav-preview" data-bind="attr: {src:indexPhoto} " alt="messages"/></a>
+                        <a href="/favlocation"><img id="photo" class="fav-preview" data-bind="attr: {src:indexPhoto} " alt="messages"/></a>
                     </div>
                 </div>
 
